@startuml
!include stylesheet.puml.txt

class Account << C, ff6c06 >>
class Activity << C, ff6c06 >>
class Contact << C, ff6c06 >>
class Document << C, ff6c06 >>
class Note << C, ff6c06 >>

Contact "*" --> "0..1" Account : " "

Account "0..1" -- "*" Activity
Account "0..1" -- "*"  Note
Account "0..1" -- "*" Document

@enduml